Fix nav_bar overlapping table headers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,7 +95,7 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 9;
+    z-index: 2;
     height: 9vh;
     display: flex;
     flex-flow: row nowrap;
